@@ -5389,9 +5389,7 @@ extern int load_assoc_usage(char *state_save_location)
 
 	safe_unpack16(&ver, buffer);
 	debug3("Version in assoc_usage header is %u", ver);
-	/* We used to pack 1 here for the version, so we can't use
-	 * SLURM_MIN_PROTOCOL_VERSION to check until 2 versions after 15.08. */
-	if (ver > SLURM_PROTOCOL_VERSION) {
+	if (ver > SLURM_PROTOCOL_VERSION || ver < SLURM_MIN_PROTOCOL_VERSION) {
 		error("***********************************************");
 		error("Can not recover assoc_usage state, "
 		      "incompatible version, got %u need > %u <= %u", ver,
@@ -5509,9 +5507,7 @@ extern int load_qos_usage(char *state_save_location)
 
 	safe_unpack16(&ver, buffer);
 	debug3("Version in qos_usage header is %u", ver);
-	/* We used to pack 1 here for the version, so we can't use
-	 * SLURM_MIN_PROTOCOL_VERSION to check until 2 versions after 15.08. */
-	if (ver > SLURM_PROTOCOL_VERSION) {
+	if (ver > SLURM_PROTOCOL_VERSION || ver < SLURM_MIN_PROTOCOL_VERSION) {
 		error("***********************************************");
 		error("Can not recover qos_usage state, "
 		      "incompatible version, got %u need > %u <= %u", ver,
